# XXX2CPP

./: .gitmodules  XXX2CPP.cabal  cabal.project  hie.yaml
app/: Typescript.hs
src/: Lib.hs
