cabal-version:      3.6
name:               XXX2CPP
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         aydenlin@foxmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules: Lib
  build-depends: base ^>=4.14.3.0,
                 semantic-ast,
                 semantic-source,
                 semantic-typescript,
                 bytestring >= 0.10.8.2 && < 0.13,
                 tree-sitter ^>= 0.9.0.0


  hs-source-dirs: src
  default-language: Haskell2010

executable XXX2CPP
    main-is:          Typescript.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      bytestring >= 0.10.8.2 && < 0.13,
                      XXX2CPP

    hs-source-dirs:   app
    default-language: Haskell2010
